# cmake_gtest_gmock_example

./: CMakeLists.txt  README.md  build.bat
include/: bar.h  foo.h
test/: .CMakeLists.txt.swp  CMakeLists.txt  example.cpp  mock_foo.h
